@@ -24,6 +24,7 @@ import com.jayway.restassured.specification.FilterableResponseSpecification
 import static com.jayway.restassured.RestAssured.given
 import static com.jayway.restassured.path.xml.XmlPath.with
 import static java.lang.String.format
+import com.jayway.restassured.spi.AuthFilter
 
 class FormAuthFilter implements AuthFilter {
   private static final String RESERVED_COOKIE_NAME = "Path"
